fixed incorrect alignment of elements on page clubs for center's addition pop-up

--- a/src/components/addCenter/css/ClubsOfCenter.css
+++ b/src/components/addCenter/css/ClubsOfCenter.css
@@ -80,3 +80,9 @@
     max-height: 300px;
     /* overflow-y: scroll; */
 }
+
+@media (min-width: 320px) and (max-width: 577px) {
+    .clubsOfCenter .form-item{
+        flex-direction: row;
+    }
+}
